relative refs wrap around in xls, fdo#84556

Change-Id: If84d468d4bd55ed55ccd517d0b078d283a1a9c38